Fix some minor issues
- Horizontal scrollbar appearance
- Hashlink each artwork
- Correct mouse pointer on each canvas

--- a/styles/index.less
+++ b/styles/index.less
@@ -6,7 +6,6 @@ html, body, #react-body {
 
 #react-body {
   text-align: center;
-  padding: 2em;
 }
 
 .undo, .redo {
@@ -28,16 +27,20 @@ html, body, #react-body {
 }
 
 canvas {
+  cursor: crosshair;
   display: inline-block;
   width: 400px;
   height: 400px;
   border-radius: 2px;
   box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+  margin-top: 3em;
   margin-bottom: 1em;
   animation: fade-in 2s;
 }
 
 canvas.sketchpad-mini {
+  margin: 0 0.6em 0 0.6em;
+  cursor: pointer;
   width: 100px;
   height: 100px;
 }
